--- a/src/Pages/Dashboard/Reviews/Reviews.css
+++ b/src/Pages/Dashboard/Reviews/Reviews.css
@@ -12,7 +12,7 @@ margin-top: 10px;
 border-radius: 5px;
 }
 .reviews textarea{
-padding: 50px 10px;
+padding: 10px 10px 50px 10px;
 display: block;
 width: 50%;
 margin: 0 auto;
